# phonova

./: .gitignore  README_DEV.md  pytest.ini  requirements-feature-groups.txt
.github/workflows/: pytest-unit-contract.yml
autoresearch/: .gitignore  README.md  merged_features.csv  prepare.py  prepare_legacy.py  program.md  program_legacy.md  pyproject.toml  train.py  train_legacy.py
notebooks/: english-transcribed-role-alignment-pipeline.ipynb
openwillis/openwillis-speech/: requirements.txt
paper_sections_3_4_5_signal_retention_clean/: README.md
paper_sections_3_4_5_signal_retention_clean/notebooks/: sections_3_4_5_en_to_ua_signal_retention.ipynb
paper_sections_3_4_5_signal_retention_clean/scripts/: run_3_4_2026_expanded_stable05_full_vader_model_family_sweep.py
tests/: conftest.py
tests/cross_language/: test_cross_language_no_unexpected_nans.py  test_language_dependent_features.py  test_strict_structural_invariants.py  test_threshold_consistency.py
tests/feature_groups/: test_coherence_perplexity.py  test_feature_group_integrity_eng.py  test_feature_group_integrity_ukr.py  test_lexical_diversity.py  test_sentiment_first_person.py  test_structural_pause_repetition.py  test_words_turns_summary_relationships.py
tests/helpers/: cross_language_outputs.py  data_loading.py  dataframe_compare.py  feature_columns.py  feature_group_integrity.py  module_loaders.py  pipeline_runner.py  runtime_checks.py  stage_language.py  thresholds.py
tests/pipeline_smoke/: test_pipeline_feature_group_selection.py  test_pipeline_full_run.py  test_pipeline_no_unexpected_nans.py  (+1 more)
(+62 files in other folders)
