[project]
name = "airest-autoresearch"
version = "0.1.0"
description = "AiRest voice feature experimentation loop inspired by karpathy/autoresearch."
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.8",
]

[tool.uv]
package = false
